--- a/config/database.yml
+++ b/config/database.yml
@@ -10,8 +10,12 @@ default: &default
   timeout: 5000
 
 development:
-  <<: *default
+  # <<: *default
+  adapter: sqlite3
   database: db/development.sqlite3
+  pool: 5
+  timeout: 5000
+
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -21,5 +25,6 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  adapter: postgresql
+  database: photogur
+  host: localhost
